--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
                         <div class="stage-card-text">Создание аэропорта «Большие Васюки» с регулярным отправлением почтовых самолётов и дирижаблей во все концы света, включая Лос-Анжелос и Мельбурн</div>
                     </div>  
 
+                    <div class="stage-navigation">
+                        <button class="stage-prev">Prev</button>
+                        <button class="stage-next">Next</button>
+                    </div>
+
+
                     <div class="airoplane">
                         <img class="airoplane-img" src="img/airoplane.png" alt="">
                     </div>
